--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   line_icons: ^2.0.1
   google_nav_bar: ^5.0.6
   flutter_svg: ^1.0.3
-
+  card_swiper: ^2.0.3
   
 dev_dependencies:
   flutter_test:
